Fixed Issue with spacing in pages , Great Going shivam :O)

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -61,7 +61,7 @@ background-color: antiquewhite;
   color: white;
   border: none;
   border-radius: 10px;
-  width: 73%;
+  width: 70%;
   background-color: aquamarine;
   font-weight: 5em;
   
